--- a/DockerFile
+++ b/DockerFile
@@ -26,7 +26,7 @@ RUN requirements="cron libpng-dev libmcrypt-dev libmcrypt4 libcurl3-dev libfreet
 # add magento cron job
 COPY magento-source/crontab /etc/cron.d/magento2-cron
 RUN chmod 0644 /etc/cron.d/magento2-cron
-RUN crontab -u root /etc/cron.d/magento2-cron 
+RUN crontab -u www-data /etc/cron.d/magento2-cron 
 
 # turn on mod_rewrite
 RUN a2enmod rewrite
